<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.meeting_room_list.AddMeetingRoomActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_View"
            android:layout_width="match_parent"
            android:textSize="@dimen/title_size"
            android:textAlignment="center"
            android:textColor="@color/blue_200"
            android:textStyle="bold"
            android:layout_height="42dp"
            android:paddingTop="10dp"
            android:text="@string/title_name"
            android:layout_marginTop="40dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="@dimen/the_top"
            android:orientation="horizontal">

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:hint="@string/meeting_room"
                android:textSize="12dp"
                />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <Spinner
                android:id="@+id/spinner_rooms"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <EditText
            android:id="@+id/hour_Lyt"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="hour-h-min"
            android:ems="10"
            android:paddingLeft="15dp"
            android:layout_marginTop="18dp"
            android:textSize="@dimen/text_size"/>

        <EditText
            android:id="@+id/date_Lyt"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/day_month_year"
            android:ems="10"
            android:paddingLeft="15dp"
            android:layout_marginTop="18dp"
            android:textSize="@dimen/text_size"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_meeting_Lyt"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_meeting_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/meeting_title"
                android:inputType="text"
                android:textSize="@dimen/text_size"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/participant_Lyt"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/participant_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/participant"
                android:inputType="text"
                android:textSize="@dimen/text_size"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/booking_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_gravity="center"
            app:cornerRadius="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/button"
            android:textColor="@color/white"
            android:backgroundTint="@drawable/reservation_button_behavior"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>